Added logic for descending to dependant files (#15)